Quick fix to internal link padding and margin on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -340,8 +340,8 @@ textarea {
 }
 
 .internal-link {
-  padding-top: 50px;
-  margin-top: -50px;
+  padding-top: 70px;
+  margin-top: -70px;
   -webkit-background-clip: content-box;
   background-clip: content-box;
   margin-bottom:
